dnl Copyright 2009-2010 Saleem Abdulrasool <compnerd@compnerd.org>
dnl vim: set sw=8 sts=8 ts=8 noet fdm=marker fmr={{{,}}} :

dnl {{{ program, version
AC_PREREQ(2.59)
AC_INIT(libace, 0.0.1, compnerd@compnerd.org)
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE([1.11.1 dist-bzip2 subdir-objects])
dnl }}}

dnl {{{ basic toolchain checks
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LIBTOOL
dnl }}}

dnl {{{ output
AM_SILENT_RULES(yes)
AC_CONFIG_FILES(Makefile)
AC_OUTPUT
dnl }}}

