lib_LTLIBRARIES = libace.la

libace_la_SOURCES = PAMControl.cc \
		    PAMControl.hh \
		    PAMEntry.cc \
		    PAMEntry.hh \
		    PAMFacility.cc \
		    PAMFacility.hh \
		    PAMPolicy.cc \
		    PAMPolicy.hh \
		    PAMStack.cc \
		    PAMStack.hh \
		    NSSService.cc \
		    NSSService.hh \
		    NSSDatabase.cc \
		    NSSDatabase.hh \
		    NSSConfiguration.cc \
		    NSSConfiguration.hh \
		    $(NULL)
